--- a/restaurant.html
+++ b/restaurant.html
@@ -2,6 +2,10 @@
 <html>
 
 <head>
+
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
@@ -27,24 +31,31 @@
   <!-- End header -->
 
   <!-- Beginning main -->
-  <main id="maincontent">
+  <main id="maincontent" >
     <!-- Beginning map -->
-    <section id="map-container">
-      <div id="map"></div>
+    <section id="map-container" role="application" aria-hidden="true" tabindex="-100">
+      <div id="map" role="application" aria-hidden="true" tabindex="-10"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
-    <section id="restaurant-container">
-      <h1 id="restaurant-name"></h1>
-      <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours"></table>
+    <section id="restaurant-container" class = "divCon">
+      <div id="ldiv">
+          <h1 id="restaurant-name" tabindex="0"></h1>
+          <img id="restaurant-img" tabindex="0">
+
+      </div>
+      <div id="rdiv">
+          <p id="restaurant-cuisine" tabindex="0"></p>
+          <p id="restaurant-address" tabindex="0"></p>
+          <table id="restaurant-hours" tabindex="0"></table>
+
+      </div>
+    
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
-    <section id="reviews-container">
-      <ul id="reviews-list"></ul>
+    <section id="reviews-container" ></section>
+      <ul id="reviews-list" ></ul>
     </section>
     <!-- End reviews -->
   </main>
